[package]
name = "tetris_core_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
enum-map = "2.7.3"
rand_chacha = { version = "0.9.0", default-features = false }
rand = { version = "0.9.0", default-features = false }
rand_seeder = "0.4.0"
once_cell = "1.21.1"
heapless = { version = "0.8.0" }
serde = { version = "1.0.219", features = ["derive"], optional = true }

[features]
default = ["std"]
std = ["alloc"]
alloc = []
serde = ["rand_chacha/serde", "dep:serde", "rand/serde", "enum-map/serde", "heapless/serde"]
